= Changelog

== Version 1.0.0-Beta6 - Released 03.07.2015

* Version bumps
** undertow-core 1.2.7.Final -> 1.2.8.Final
** freemarker 2.3.22 -> 2.3.23 
* Sonar Refactorings (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/32[#32] Switched to Java8 DateTime API (svenkubiak)

== Version 1.0.0-Beta5 - Released 01.07.2015

* https://github.com/svenkubiak/mangooio/issues/29[#29] Fixed bug in authentication and session cookie generation (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/28[#28] Changed default expire of authentication to one hour (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/26[#26] Added option to pass an external configuration path (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/23[#23] Added form unit tests and more bindings tests (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/20[#20] Added convinent methods for retrieving default config values (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/24[#24] Switched from properties to yaml configuration (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/17[#17] Added preparsing of routes (svenkubiak)

== Version 1.0.0-Beta4 - Released 29.07.2015

* https://github.com/svenkubiak/mangooio/issues/19[#19] Fixed MangooFluent and refactored testing utilities (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/18[#18] Added default validation messages for form handling (svenkubiak)
* Better exception handling when in dev mode (svenkubiak)
* Fixed bug that prevented flash from bein passed to next request (svenkubiak)
* Optimized the shade plugin to create smaller JAR files (svenkubiak)

== Version 1.0.0-Beta3 - Released 26.07.2015

* Fixed bug that did not set the correct cookie for authentication (svenkubiak)
* Fixed bug in authentication which caused an error when authentication was injected (svenkubiak)
* Fixed bug in cache that throw an NPE when getType was called and value was not in cache (svenkubiak)