@@ -2,7 +2,9 @@
 
 == Version 1.0.0-Beta6 - Released 03.07.2015
 
-* Version bumps
+* Added some more javadoc (svenkubiak)
+* Template engine does not throw generic exception anymore, throws specific ones instead (svenkubiak)
+* Version bumps (svenkubiak)
 ** undertow-core 1.2.7.Final -> 1.2.8.Final
 ** freemarker 2.3.22 -> 2.3.23 
 * Sonar Refactorings (svenkubiak)
